<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_RecoveryState" Id="{0cfef865-1384-4e4a-be3f-5c996ab7a8f8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_RecoveryState :
(

	Idle 						:= 0,
	Metering_Solvent1 			:= 1,
	Recirculate_Solvent1 		:= 2,
	Solvent_Soak 				:= 3,
	Cleaning_Lines_S1 			:= 4,
	Metering_Solvent2 			:= 5,
	Mix_Solvent1_2 				:= 6,
	Cleaning_Lines_S1_S2 		:= 7,
	Prime_Needles 				:= 8,
	Fill_Vials_Row_1 			:= 9,
	Fill_Vials_Row_2 			:= 10,
	Fill_Vials_Row_3 			:= 11,
	Fill_Vials_Row_4 			:= 12,
	Waste_Remaining_Solvent 	:= 13,
	Completed 					:= 14

);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>