<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_EL7062A2" Id="{c2d178b6-92f3-4256-8c73-4e8aa61c1d8f}">
    <Declaration><![CDATA[TYPE ST_EL7062A2 EXTENDS ST_Motor :
STRUCT
	//Axis 2 - Pump Rotary Actuator - 2A
	nStepsPerRev	: UDINT := 200;		// Number of steps per revolution
    nCurrentStep  	: DINT;   			// Current Step
    rSpeed        	: REAL;   			// Current Velocity (RPM)
	rDistance     	: LREAL; 			// Relative distance to be moved (Steps)
    rRelVelocity  	: REAL := 1000;  	// Relative Velocity
    rAcceleration 	: REAL := 1500; 	// Acceleration for relative motion
	rDeceleration	: REAL := 1500;		// Deceleration for relative motion
	rPumpFactor		: REAL; 			// the ratio between degrees/setps and volume
	rDeadVolume		: REAL;				// Dead Volume in the pipes to be added to the volume pumping
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>