<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_VolumeLine" Id="{10079aa6-3dcd-47db-8749-7785c4270a90}">
    <Declaration><![CDATA[TYPE ST_VolumeLine :
STRUCT
    iPump   : INT; // Pump number (1 to 10)
    sStage  : STRING(10); // Stage name or ID (e.g., S0, S1, Cone)
    rRinse1 : REAL; // Volume used in Rinse 1 phase for this stage (ml)
    rRinse2 : REAL; // Volume used in Rinse 2 phase for this stage (ml)
    rWash1  : REAL; // Volume used in Wash 1 phase for this stage (ml)
    rWash2  : REAL; // Volume used in Wash 2 phase for this stage (ml)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>