<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Recipe" Id="{dea22a66-1424-457b-bb31-9cb7538a2d73}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	//Recipe Parameters from HMI
	stInfo			: ST_RecipeInfo;			// info Parameters
	stSolventNTimes	: ST_RecipeSolventAndTimes;	// Solvent and Times Parameters
	stVolumes		: ST_RecipeVolumes;			// Volumes Parameters
	stOtherParams	: ST_RecipeOtherParams;		// Other Parameters
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>